# kenobi

./: .pre-commit-config.yaml  LICENSE  MANIFEST  MANIFEST.in  Makefile  NOTICE.txt  README.md  README.rst  README.rst~  howto.txt  kenobi.html  kenobi.py  kenobi_sqlite.py  pyproject.toml  setup.py  test_kenobi.py  tests.py
.features_sandbox/: collections.py
.ideas/: col.py  collections.py  tables.py
docs/: .style.css.swp  api.html  docs.html  index.html  new.html~  style.css  style.css~  walk.html
requirements/: dev.in  dev.unlock  manage.in  manage.unlock  pip.unlock
src/kenobi/: __init__.py  kenobi.py
tests/: conftest.py  test_kenobi.py
